# trip-a-day

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  car_rates.json  main.py  new-project-checklist.md  pyproject.toml  requirements.txt  scheduler.py  trip_of_the_day_spec.md  ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  integration.yml
data/: gsa_per_diem.json  per_diem_rates.json  seed_airports.json  state_dept_per_diem.json
docs/: v1_review_report.md
scripts/: demo_basic.py  resend_last_trip.py  run_unit_tests.sh  update_rates.py
src/myproject/: __init__.py
src/trip_a_day/: __init__.py  cache.py  charts.py  costs.py  db.py  destination_input.py  fetcher.py  filters.py  links.py  models.py  notifier.py  preferences.py  ranker.py  search.py  selector.py  utils.py  window_search.py
tests/: test_api_counter.py  test_charts.py  test_db_migrations.py  test_imports.py  test_links.py  test_notifier_limits.py  test_pass1_resilience.py  test_performance.py  test_settings.py  test_smoke.py  test_travel_windows.py  test_utils.py
tests/fixtures/: mock_flights.json
tests/integration/: conftest.py  test_fetcher.py  test_placeholder.py
tests/unit/: test_cache.py  test_costs.py  test_costs_transport.py  test_destination_input.py  test_fetcher_flights.py  test_fetcher_nearby.py  test_fetcher_perdiem.py  test_filters.py  test_main_flex.py  test_main_smoke.py  test_multi_airport.py  test_notifier_departure.py  test_placeholder.py  test_ranker.py  test_selector.py  test_window_search.py
