[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "myproject"
version = "0.1.0"
description = "TODO: Short project description"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "echocircuit", email = "8434258+echocircuit@users.noreply.github.com" },
]
dependencies = [
    # Add runtime dependencies here
    # "numpy>=1.26",
    # "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.11",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Optional: CLI entry point
# [project.scripts]
# myproject = "myproject.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (linting + formatting) ---
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.isort]
known-first-party = ["myproject"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
addopts = "-v --tb=short"

# --- Coverage ---
[tool.coverage.run]
source = ["src/myproject"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # start permissive, tighten over time
check_untyped_defs = true
