[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-a-day"
version = "0.1.0"
description = "Determines the cheapest trip that can be booked each day."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "echocircuit" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.11",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests>=2.32",
]

# Optional: CLI entry point
# [project.scripts]
# trip-a-day = "trip_a_day.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (linting + formatting) ---
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before env-dependent imports; E402 is expected here
"main.py" = ["E402"]
"scheduler.py" = ["E402"]
"ui.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["trip_a_day"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
addopts = "-v --tb=short -W error::DeprecationWarning --ignore=tests/integration"

# --- Coverage ---
[tool.coverage.run]
source = ["src/trip_a_day"]
branch = true
# Phase 1: only costs.py and ranker.py have unit tests (per spec).
# Remaining modules are covered by integration tests — omit them here
# so fail_under applies only to the modules that unit tests are meant to cover.
omit = [
    "src/trip_a_day/db.py",
    "src/trip_a_day/fetcher.py",
    "src/trip_a_day/preferences.py",
    "src/trip_a_day/notifier.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # start permissive, tighten over time
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fast_flights.*", "resend.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true
ignore_errors = true
